# keycloak-to-vcf-scim

./: .env.example  .gitignore  Dockerfile  README.md  deploy-docker.md  deploy-systemd.md  docker-compose.yml  install-systemd.sh  main.py  pyproject.toml  scim-client.service
src/: main.py
src/api/: debug_routes.py  routes.py
src/core/: config.py  sync_state.py
src/models/: keycloak.py  scim.py
src/services/: keycloak_client.py  scheduler.py  scim_client.py  sync_service.py
